# mandelbrot-benchmark

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  main.c  mandelbrot  requirements.txt  visualize.py
docs/: results.csv  results_amd.csv  results_auto_vec.csv
